<resources>
    <string name="app_name">MyTranslationApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello!</string>
    <string name="translate_text">Translate text</string>
    <string name="translate">Translate</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="default_language">English</string>
    <string name="progressbar_text">Downloading model please wait.</string>
    <string name="please_wait">Please wait.</string>

    <string-array name="language_names">
        <item>Afrikaans</item>
        <item>Arabic</item>
        <item>Belarusian</item>
        <item>Bulgarian</item>
        <item>Bengali</item>
        <item>Catalan</item>
        <item>Czech</item>
        <item>Welsh</item>
        <item>Danish</item>
        <item>German</item>
        <item>Greek</item>
        <item>English</item>
        <item>Esperanto</item>
        <item>Spanish</item>
        <item>Estonian</item>
        <item>Persian</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Irish</item>
        <item>Galician</item>
        <item>Gujarati</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Croatian</item>
        <item>Haitian</item>
        <item>Hungarian</item>
        <item>Indonesian</item>
        <item>Icelandic</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Georgian</item>
        <item>Kannada</item>
        <item>Korean</item>
        <item>Lithuanian</item>
        <item>Latvian</item>
        <item>Macedonian</item>
        <item>Marathi</item>
        <item>Malay</item>
        <item>Maltese</item>
        <item>Dutch</item>
        <item>Norwegian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Albanian</item>
        <item>Swedish</item>
        <item>Swahili</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item>Thai</item>
        <item>Tagalog</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Vietnamese</item>
        <item>Chinese</item>
    </string-array>
    <string name="title_activity_translation_launcher">TranslationLauncherActivity</string>
</resources>