<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/translation_language"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/translate_text"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:hint="@string/translate_text"
            android:textSize="30dp"
            android:gravity="top"
            android:layout_marginTop="70dp"
            />
        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_first_fragment"
            app:layout_constraintBottom_toTopOf="@id/button_first"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="30dp"
            android:layout_gravity="center"/>
        <Spinner
            android:id="@+id/planets_spinner"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:entries="@array/language_names"
            android:prompt="@string/default_language"
            android:gravity="center"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translate"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="30dp"
            android:textAllCaps="false"
            android:layout_gravity="center"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/progressBar_anime"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:progress="0"/>
        <TextView
            android:id="@+id/progressbar_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/progressbar_text"
            android:textSize="20dp"
            android:layout_marginTop="79dp"
            android:layout_marginLeft="37dp"
            android:layout_gravity="center"
            android:maxLines="3"
            android:textAlignment="center"/>
    </RelativeLayout>
</RelativeLayout>